# AntPat

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
antpat/: __init__.py  dualpolelem.py  radfarfield.py  theoreticalantennas.py
antpat/io/: CST_FF_ASCII.py  NECread.py  dualpol_ingest.py  feko_ffe.py  filetypes.py  flatfile_ff.py  load_numpy.py
antpat/reps/: hamaker.py
antpat/reps/sphgridfun/: pntsonsphere.py  test.py  tvecfun.py
antpat/reps/vsharm/: coefs.py  hansens.py  test.py  vsh.py  vshfield.py
antpat/scripts/: viewFFpat.py  viewJonespat_dual.py
example_FF_files/SWE/: HBA_fr_1_ada_5.sph  Ideal_DipTE_0.sph  Ideal_DipTE_p1.sph  Ideal_DipTM_0.sph  Ideal_DipTM_p1.sph  Ideal_HuygenSrc.sph  Ideal_OctTE_m1.sph  Ideal_OctTE_p1.sph  Ideal_OctTE_p2.sph  Ideal_QuadTE_0.sph  Ideal_QuadTE_m1.sph  Ideal_QuadTE_m2.sph  Ideal_QuadTE_p1.sph  Ideal_QuadTM_m2.sph  Ideal_QuadTM_p1.sph  Ideal_QuadTM_p2.sph  Lofar-LBA-X_90.sph
scripts/: viewFFpat.py  viewJonespat.py  viewJonespat_dual.py  viewStokespat.py  viewdiroverfreq.py
share/FlatFile/: bla_phi.ff  bla_the.ff
share/HA_cc/: DefaultCoeffHBA.cc  DefaultCoeffLBA.cc  defaultCoeffHBA.cc  defaultCoeffLBA.cc
share/NEC_out/: Lofar-dipole-FREE.out
share/SWE/: Ideal_CircEdSrc_LHCup.sph  Ideal_DipTE_m1.sph  Ideal_DipTM_m1.sph  Ideal_LinEd_X.sph  Ideal_OctTE_m2.sph  Ideal_QuadTE_p2.sph  Ideal_QuadTM_0.sph  Ideal_QuadTM_m1.sph
tests/: test_CST_FF_ASCII.py  tests.py
